header align fixed

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -10,65 +10,54 @@ body {
 .navbar {
     width: 100%;
     height: 80px;
-    background-color: black;
-    margin-top: 3%; 
+    background-color:red;
     position: fixed;
+    z-index: 12;
 }
 
 .logo {
-    width: 120px;
-    height: 120px;
-    color: white;
-    display:flex;
-    justify-content: flex-start;
-   
-    
-    
-    @media (min-width: 320px) {
-        width: 80px;
-        height: 80px;
-     }
-
-    @media (min-width: 375px) {
-       margin-right: 5%;
-    }
-
-    @media (min-width: 425px) {
-        margin-right: 22%;
-     }
-
-     @media (min-width: 768px) {
-        margin-right: 55%;
-     }
-
-     @media (min-width: 1024px) {
-      
-     }
-
-
-     @media (min-width: 1440px) {
-     
-     }
+    width: 80px;
+    height: 80px;
+    color:white; 
 }
 
-.links-wrap {
+
+.wrapper { 
     display: flex;
-    justify-content: flex-end;
-    margin-right:5%;
-    width: 95%;
+    justify-content: center;
 }
 
-.links-wrap a {
+.links-wrapper {
+    margin-top: 30px;
+    margin-right: 5%;
+    
+    
+}
+
+.links-wrapper a {
     color: white;
     font-size: 15px;
-    margin-left: 2%;
-    margin-right: 5%;
     text-decoration: none;
     font-weight: 600;
     font-family: $regular;
 
+    @media (min-width: 320px) {
+       font-size: 15px;
+       margin-left: 20px;
+     }
 
-    @media (max-width: 320px) {
-        font-size: 12px;
-    }
+     @media (min-width: 768px) {
+        font-size: 15px;
+        margin-left: 80px;
+      }
+
+      @media (min-width: 1024px) {
+        font-size: 15px;
+        margin-left: 120px;
+      }
+
+      @media (min-width: 1044px) {
+        font-size: 15px;
+        margin-left: 200px;
+      }
 }
